[gd_scene load_steps=6 format=3 uid="uid://c368hkuu3sos2"]

[ext_resource type="Script" uid="uid://dwqpq2wnbtjlm" path="res://hud.gd" id="1_37p78"]

[sub_resource type="LabelSettings" id="LabelSettings_n2snw"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_37p78"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_8sq4i"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_64ctp"]
font_size = 50

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 15.0
offset_right = 201.0
offset_bottom = 70.0
text = "Score : 0"
label_settings = SubResource("LabelSettings_n2snw")

[node name="LivesLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 173.0
offset_bottom = 135.0
text = "Vies : 3"
label_settings = SubResource("LabelSettings_37p78")

[node name="BombLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 40.0
offset_top = 145.0
offset_right = 251.0
offset_bottom = 200.0
text = "Bombes : 3"
label_settings = SubResource("LabelSettings_8sq4i")

[node name="RestartButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 51.0
grow_horizontal = 0
text = "Recommencer"

[node name="GameOverPanel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="Label" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_64ctp")
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Rejouer"

[node name="MenuButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Retour au Menu"

[node name="VictoryPanel" type="Panel" parent="."]
visible = false
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryPanel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="Label" type="Label" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "VICTOIRE !"
label_settings = SubResource("LabelSettings_64ctp")
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "Niveau Suivant"

[node name="RetryButton" type="Button" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "Rejouer"

[node name="MenuButton" type="Button" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "Retour au Menu"

[connection signal="pressed" from="Control/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverPanel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOverPanel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VictoryPanel/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="VictoryPanel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VictoryPanel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
